Start externalize apache libs